================================================================
original version : https://www.esoui.com/downloads/info1412-LorePlay-EmotesOutfitsandmore.html

NOTE : this modified version is still under the Artistic License 2.0

- Significant improvement of location recognition engine.
  Now support for Senchal type city, Senchal Palace type map and inside some large buildings in cities.

Version 1.6.51 : by Calamath
- Fixed a bug that UI error occurs when LibDebugLogger is not installed.

Version 1.6.50 : by Calamath
- Updated location database to support several zones. Eyevea, Summerset, Northern Elsweyr and Southern Elsweyr are now recongnized properly.
- Updated database for Elsweyr Chapter. Rimmen and Riverhold are now recognized as cities.
- Updated database for Murkmire DLC. Lilmoth is now recognized as a city.
- Updated database for Summerset Chapter. Alinor, Shimmerene, Lillandril and Illumination Academy are now recognized as cities.
- Abyssal Geysers in Summerset are now recognized as same as Dolmens.
- Updated database for Clockwork City DLC. Brass Fortress is now correctly recognized as a city.

Version 1.5.91 : by Calamath
- Expand internal location database tables for future development.

Version 1.5.90 : by Calamath
- Final tweaks and code clean-up.

Version 1.5.90 beta9 : by Calamath
- Separated key-binding configuration strings into localized files for future development.
- Renamed key-binding configuration strings.

Version 1.5.90 beta8 : by Calamath
- Separated add-on configuration panel strings into localized files for future development.
- Some system messages have been changed to clearly indicate that they were output by the LorePlay add-on.

Version 1.5.90 beta7 : by Calamath
- Updated the debug logging feature for future development.

Version 1.5.90 beta6 : by Calamath
[Restructured localization]
- Localization updates including keywords used to recognize dolmens.
- Added FR and JP localization files in addition to EN and DE.